Fix alert box section on mobile

--- a/src/component/box/AlertNews.css
+++ b/src/component/box/AlertNews.css
@@ -70,3 +70,7 @@
     cursor: default;
     color: var(--text-neutral-10);
 }
+
+.AlertNews-hidden {
+    visibility: hidden;
+}
